[package]
name = "reword"
version = "2.0.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides a macro for generating static structures used for value lookup."
documentation = "https://docs.rs/crate/reword"
repository = "https://github.com/evenorog/reword"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = []
categories = ["no-std", "internationalization"]
exclude = ["/.travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "evenorog/reword" }
maintenance = { status = "actively-developed" }
