[package]
name = "reword"
version = "3.0.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides a macro to generate structures used for constant value lookup."
documentation = "https://docs.rs/crate/reword"
repository = "https://github.com/evenorog/reword"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = []
categories = ["no-std", "internationalization"]
exclude = ["/.travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "evenorog/reword" }
maintenance = { status = "actively-developed" }
